word wrap issue fixed

--- a/css/todo.css
+++ b/css/todo.css
@@ -293,6 +293,7 @@ button:disabled:hover {
     margin: 0;
     font-size: 15px;
     word-wrap: break-word;
+    word-break: break-all; 
 }
 
 .nobold {
@@ -316,6 +317,9 @@ button:disabled:hover {
     /* Float left for task data */
     width: 70%;
     /* Adjust width as needed */
+    
+    word-wrap: break-word;
+    word-break: break-all; 
 }
 
 .task-actions {
